--- a/SASS/_mixins.scss
+++ b/SASS/_mixins.scss
@@ -22,7 +22,7 @@
 
 @media screen and (min-width: 600px) {
     .stories {
-        grid-template-columns: 1fr 1fr 1fr;
+        // grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
